Skip leading space in ltr text in rtl flow when placing ellipsis

Account for leading space when selecting our offset for the visible text.

BUG=667128

Review-Url: https://codereview.chromium.org/2529243002
Cr-Commit-Position: refs/heads/master@{#436216}

Former-commit-id: 77dd2d44c88d51cbda3d2fcf35c7153b16f652e4